# yumi_experiments

./: CMakeLists.txt  README.md  package.xml  yumi_experiments_plugins.xml
action/: AdmittanceController.action  ApproachController.action  RunFolding.action  SensorCalibration.action
config/: admittance.yaml  approach.yaml  calibration.yaml  calibration_init.yaml  folding.yaml
include/yumi_experiments/: admittance_controller.hpp  approach_controller.hpp  approach_ros_controller.hpp  sensor_calibration_controller.hpp
launch/: calibration.launch  folding.launch
scripts/: initialize_calibration.py  initialize_folding.py
src/: admittance_action_node.cpp  admittance_controller.cpp  approach_action_node.cpp  approach_controller.cpp  approach_ros_controller.cpp  sensor_calibration_action_node.cpp  sensor_calibration_controller.cpp
