<?xml version="1.0"?>
<package format="2">
  <name>yumi_experiments</name>
  <version>0.2.0</version>
  <description>Contains scripts and launch filesm together with relevant controllers to initialize experiments with the yumi.</description>
  <maintainer email="diogoa@kth.se">diogo</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>cmake_modules</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>generic_control_toolbox</depend>
  <depend>folding_assembly_controller</depend>

  <export>
    <controller_interface plugin="${prefix}/yumi_experiments_plugins.xml"/>
  </export>
</package>
